further nav stylng - emphasis color

--- a/css/index.css
+++ b/css/index.css
@@ -20,9 +20,11 @@ li a{
     padding: 8px 16px;
     width: 150px;
     text-decoration: none;
+    text-align: center;
 }
 
 li a:hover {
     background-color: black;
     color: #007707;
+    text-emphasis: #004400;
 }
