--- a/css/index.css
+++ b/css/index.css
@@ -11,6 +11,7 @@ ul {
     padding: 0;
     border-radius: 25%;
     border: 1px;
+    background-color: #007707;
 }
 li {
     display: inline-grid;
@@ -25,6 +26,7 @@ li a{
     text-align: center;
     border-radius: 25%;
     border: 1px;
+    background-color: #004400;
 }
 
 li a:hover {
