--- a/css/index.css
+++ b/css/index.css
@@ -10,6 +10,7 @@ ul {
     margin: 0;
     padding: 0;
     border-radius: 25%;
+    border-style: solid;
     border: black 1px;
 }
 li {
@@ -25,6 +26,7 @@ li a{
     text-align: center;
     border-radius: 25%;
     border: black 1px;
+    border-style: solid;
     background-color: #004400;
 }
 
